--- a/index.css
+++ b/index.css
@@ -6,21 +6,22 @@
 body {
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: center;
     padding: 0;
 
-    margin-right: 200px;
-    margin-top: 150px;
+    margin-top: 250px;
 
     background-image: url(./images/960845407956.jpg);
     background-repeat: no-repeat;
-    background-size: 950px;
+    background-size: 500px;
+    background-position-x: -50px;
+    background-position-y: 270px;
     background-color: rgb(235,207,255);
 }
 
-
 #tela-de-login {
     background-color: rgb(235,207,255);
+    opacity: 0.9;
     padding-top: 50px;
     padding-bottom: 50px;
     padding-left: 15px;
@@ -66,4 +67,74 @@ button {
 
     width: 100%;
     height: 30px;
+}
+
+@media (min-width: 768px) {
+
+    body {
+        display: flex;
+        align-items: center;
+        justify-content: right;
+        padding: 0;
+
+        margin-right: 200px;
+        margin-top: 150px;
+
+        background-image: url(./images/960845407956.jpg);
+        background-repeat: no-repeat;
+        background-position-y: 80px;
+        background-size: 950px;
+        background-color: rgb(235,207,255);
+    }
+
+
+    #tela-de-login {
+        background-color: rgb(235,207,255);
+        padding-top: 50px;
+        padding-bottom: 50px;
+        padding-left: 15px;
+        padding-right: 15px;
+        
+        border-radius: 6px;
+        box-shadow: 5px 5px black, -5px 5px black, 5px -5px black, -5px -5px black;
+    }
+
+    h1, h2 {
+        text-align: left;
+        font-size: 25px;
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    #inputLogin, #inputSenha {
+        margin-top: 7%;
+        margin-bottom: 7%;
+
+        width: 300px;
+        height: 35px;
+        border-radius: 7px;
+
+        background-color: rgb(243, 240, 240);
+    }
+
+    #recuperação {
+        display: block;
+    }
+
+    #checkbox {
+        margin-right: 3px;
+        width: 20px;
+    }
+
+    #checkbox-text {
+        font-size: 15px;
+    }
+
+    button {
+        display: block;
+        margin-top: 15px;
+
+        width: 100%;
+        height: 30px;
+}
+
 }
